[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_left = 171.0
margin_top = 230.0
margin_right = 349.0
margin_bottom = 278.0
text = "Toque aqui"

[node name="ColorRect" type="ColorRect" parent="Button1"]
margin_left = -20.0
margin_top = -130.0
margin_right = 202.0
margin_bottom = -16.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Button1"]
margin_left = -18.0
margin_top = -118.0
margin_right = 197.0
margin_bottom = -21.0

[node name="Button2" type="Button" parent="."]
margin_left = 647.0
margin_top = 233.0
margin_right = 863.0
margin_bottom = 288.0
text = "Escreva lá em cima e toque aqui"

[node name="ColorRect" type="ColorRect" parent="Button2"]
margin_left = -13.0
margin_top = -130.0
margin_right = 223.0
margin_bottom = -20.0
color = Color( 0, 0, 0, 1 )

[node name="LineEdit" type="LineEdit" parent="Button2"]
margin_left = -11.0
margin_top = -160.0
margin_right = 140.0
margin_bottom = -136.0

[node name="Label" type="Label" parent="Button2"]
margin_left = -8.0
margin_top = -121.0
margin_right = 210.0
margin_bottom = -34.0

[node name="Button3" type="Button" parent="."]
margin_left = 177.0
margin_top = 494.0
margin_right = 367.0
margin_bottom = 543.0
text = "Toque aqui também"

[node name="ColorRect" type="ColorRect" parent="Button3"]
margin_left = -15.0
margin_top = -117.0
margin_right = 181.0
margin_bottom = -28.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Button3"]
margin_left = -9.0
margin_top = -86.0
margin_right = 96.0
margin_bottom = -28.0

[node name="Button4" type="Button" parent="."]
margin_left = 667.0
margin_top = 500.0
margin_right = 854.0
margin_bottom = 554.0
text = "Toque aqui dessa vez"

[node name="ColorRect" type="ColorRect" parent="Button4"]
margin_left = -27.0
margin_top = -111.0
margin_right = 200.0
margin_bottom = -20.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Button4"]
margin_left = -25.0
margin_top = -109.0
margin_right = 194.0
margin_bottom = -27.0

[node name="LineEdit" type="LineEdit" parent="Button4"]
margin_left = -27.0
margin_top = -146.0
margin_right = 112.0
margin_bottom = -122.0

[connection signal="pressed" from="Button1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
